# RealSense_Grabber

./: .gitignore  .travis.yml  .travis.yml.swp  CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp  realsense.cpp  realsense.h  realsense_util.h~  realsense_utils.cpp  realsense_utils.h
common/include/: RobustMatcher.h  aruco_marker.hpp  config.hpp  filters.hpp  loader.hpp  loader.hpp.autosave  matrix_utils.hpp  realsense.h  registrator.hpp  segmentation.hpp  types.hpp  util.hpp
common/include/fiducial/: AbstractFiducialModel.h  FiducialDefines.h  FiducialModelPi.h
common/src/: AbstractFiducialModel.cpp  FiducialModelPi.cpp  RobustMatcher.cpp  aruco_marker.cpp  ellipserefine.cpp  features.cpp  filters.cpp  loader.cpp  matrix_utils.cpp  readData.cpp  realsense.cpp  registrator.cpp  segmentation.cpp  util.cpp
config/: config.yaml  config.yaml~
src/: CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp  main_model.cpp  realsense.cpp  realsense.h  viewer_utils.cpp  viewer_utils.h  viewer_utils.h.autosave
